--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
         </div>
         <div class="col">
           <div class="p-4 project-card">
-            <b style="font-size: 30px">External Game Manager</b>
+            <b style="font-size: 30px">External Game App</b>
             <div
               id="carouselExampleFade"
               style="padding-top: 1vh"
@@ -518,11 +518,58 @@
             </p>
           </div>
         </div>
+        <div class="col">
+          <div class="p-4 project-card">
+            <b style="font-size: 30px">Help Me Bevo</b>
+
+            <div
+              id="carouselExampleFade"
+              style="padding-top: 1vh"
+              class="carousel"
+            >
+              <div class="carousel-inner zoom">
+                <div class="carousel-item active">
+                  <a href="#"
+                    ><img
+                      src="./Images/HelpMeBevo.png"
+                      class="d-block w-100"
+                      alt="..."
+                  /></a>
+                </div>
+              </div>
+            </div>
+            <p style="padding-top: 3vh">
+              A chrome extension to display the infamous 3rd down Bevo animation
+              every time you submit an assignment on Canvas. This extension has
+              thousands of active users a week and nearly over a thousand
+              downloads!
+            </p>
+
+            <p>
+              <img
+                src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black"
+              />
+              <img
+                src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"
+              />
+              <img
+                src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white"
+              />
+              <a
+                class="p-2 me-auto no-underline"
+                href="https://github.com/arjohnsonn/Help-Me-Bevo"
+                target="_blank"
+              >
+                <i class="fa-brands fa-github fa-xl"></i>
+              </a>
+            </p>
+          </div>
+        </div>
       </div>
       <div class="row gx-5">
         <div class="col">
           <div class="p-4 project-card">
-            <b style="font-size: 30px">iOS Application 1</b>
+            <b style="font-size: 30px">iOS Application</b>
             <div
               id="carouselExampleFade"
               style="padding-top: 1vh"
@@ -565,8 +612,7 @@
         </div>
         <div class="col">
           <div class="p-4 project-card">
-            <b style="font-size: 30px">Help Me Bevo</b>
-
+            <b style="font-size: 30px">Canvas Quiz Strikethrough</b>
             <div
               id="carouselExampleFade"
               style="padding-top: 1vh"
@@ -576,7 +622,7 @@
                 <div class="carousel-item active">
                   <a href="#"
                     ><img
-                      src="./Images/HelpMeBevo.png"
+                      src="./Images/CQS.png"
                       class="d-block w-100"
                       alt="..."
                   /></a>
@@ -584,13 +630,11 @@
               </div>
             </div>
             <p style="padding-top: 3vh">
-              A simple chrome extension to display the infamous 3rd down Bevo
-              animation every time you submit an assignment on Canvas. This was
-              originally suggested on social media with hundreds of likes, and I
-              decided to make it a reality for all UT students who want the
-              extra motivation!
+              Natively, there is not an option on Canvas for a student to
+              strikethrough an answer choice they think is wrong. With this
+              browser extension, students can easily strikethrough an answer
+              choice so they can conclude to their final answer easily.<br /><br />
             </p>
-
             <p>
               <img
                 src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black"
@@ -603,7 +647,45 @@
               />
               <a
                 class="p-2 me-auto no-underline"
-                href="https://github.com/arjohnsonn/Help-Me-Bevo"
+                href="https://github.com/arjohnsonn/canvas-quiz-strikethrough"
+                target="_blank"
+              >
+                <i class="fa-brands fa-github fa-xl"></i>
+              </a>
+            </p>
+          </div>
+        </div>
+        <div class="col">
+          <div class="p-4 project-card">
+            <b style="font-size: 30px">Pet Bevo</b>
+            <div
+              id="carouselExampleFade"
+              style="padding-top: 1vh"
+              class="carousel"
+            >
+              <div class="carousel-inner zoom">
+                <div class="carousel-item active">
+                  <!--<a href="#"><img src="" class="d-block w-100" alt="..." /></a>-->
+                </div>
+              </div>
+            </div>
+            <p style="padding-top: 3vh">
+              Let Bevo roam around webpages of your choice! More information
+              coming soon...<br /><br />
+            </p>
+            <p>
+              <img
+                src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black"
+              />
+              <img
+                src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"
+              />
+              <img
+                src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white"
+              />
+              <a
+                class="p-2 me-auto no-underline"
+                href="https://github.com/arjohnsonn/pet-bevo"
                 target="_blank"
               >
                 <i class="fa-brands fa-github fa-xl"></i>
