Fixed stacking on mobile

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aiden Johnson</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./styles/input.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -164,106 +164,47 @@
     </div>
     <div
       class="container overflow-hidden text-center fade-up-desktop fade-up-mobile animation"
-      style="padding-bottom: 10vh"
+      style="padding-bottom: 20vh"
     >
-      <div class="row gx-5">
+      <div class="row row-cols-1 row-cols-md-3 gx-4 text-center">
         <!-- ENTRIES -->
-
-        <!-- <div class="col">
+        <div class="col-md-4">
           <div class="p-4 project-card">
-            <div class="fade-right-desktop fade-right-mobile animation">
-              <h3>Past</h3>
-              <p>
-                Taking after my father, I initially wanted to become an
-                aerospace engineer. However, as I grew older with technology
-                surrounding me, I became naturally experienced in all things
-                software. Because of this, I decided to combine my desire of
-                becoming like my father and my love for software, and entered
-                the world of programming.
-              </p>
-            </div>
-            <div class="fade-right-desktop fade-right-mobile animation">
-              <h3>Present</h3>
-              <p>
-                 Currently, I am a college freshman attending the
-                  <b style="color: rgb(212, 120, 0)"
-                    >University of Texas at Austin</b
-                  >
-                  for <b>Computer Science</b>. I tend to work on side projects
-                  to branch my knowledge, along with engaging in organizations I
-                  have joined at my school. Additionally, on the side, I own and
-                  program a popular Roblox game played over 470,000 times as a
-                  front & backend developer.
-              </p>
-            </div>
-            <div class="fade-right-desktop fade-right-mobile animation">
-              <h3>Future</h3>
-              <p>
-                Every goal I set are building blocks for my future, which
-                include graduating from college, and becoming either a software
-                engineer or entering the cybersecurity field. However, all
-                things technology and software will pique my interest always.
-              </p>
-            </div>
+            <b style="font-size: 30px">Past</b>
+            <p style="padding-top: 3vh">
+              Taking after my father, I initially wanted to become an aerospace
+              engineer. However, as I grew older with technology surrounding me,
+              I became naturally experienced in all things software. Because of
+              this, I decided to combine my desire of becoming like my father
+              and my love for software, and entered the world of programming.
+            </p>
           </div>
         </div>
-
-        <div class="w-100" id="column-break"></div>
-
-        <div class="col">
+        <div class="col-md-4">
           <div class="p-4 project-card">
-            <img src="./Images/Portrait.png" class="d-block w-100" alt="..." />
+            <b style="font-size: 30px">Present</b>
+            <p style="padding-top: 3vh">
+              Currently, I am a college freshman attending the
+              <b style="color: rgb(212, 120, 0)"
+                >University of Texas at Austin</b
+              >
+              for <b>Computer Science</b>. I tend to work on side projects to
+              branch my knowledge, along with engaging in organizations I have
+              joined at my school. Additionally, on the side, I own and program
+              a popular Roblox game played over 470,000 times as a front &
+              backend developer.
+            </p>
           </div>
-        </div>-->
-
-        <!-- No Picture -->
-        <div
-          class="container overflow-hidden text-center fade-up-desktop fade-up-mobile animation"
-          style="padding-bottom: 20vh"
-        >
-          <div id="about-me-cols" class="row row-cols-2">
-            <!-- ENTRIES -->
-            <div class="col">
-              <div class="p-4 project-card">
-                <b style="font-size: 30px">Past</b>
-                <p style="padding-top: 3vh">
-                  Taking after my father, I initially wanted to become an
-                  aerospace engineer. However, as I grew older with technology
-                  surrounding me, I became naturally experienced in all things
-                  software. Because of this, I decided to combine my desire of
-                  becoming like my father and my love for software, and entered
-                  the world of programming.
-                </p>
-              </div>
-            </div>
-            <div class="col">
-              <div class="p-4 project-card">
-                <b style="font-size: 30px">Present</b>
-                <p style="padding-top: 3vh">
-                  Currently, I am a college freshman attending the
-                  <b style="color: rgb(212, 120, 0)"
-                    >University of Texas at Austin</b
-                  >
-                  for <b>Computer Science</b>. I tend to work on side projects
-                  to branch my knowledge, along with engaging in organizations I
-                  have joined at my school. Additionally, on the side, I own and
-                  program a popular Roblox game played over 470,000 times as a
-                  front & backend developer.
-                </p>
-              </div>
-            </div>
-            <div class="col">
-              <div class="p-4 project-card">
-                <b style="font-size: 30px">Future</b>
-                <p style="padding-top: 3vh">
-                  Every goal I set are building blocks for my future, which
-                  include graduating from college, and becoming either a
-                  software engineer or entering the cybersecurity field.
-                  However, all things technology and software will pique my
-                  interest always.
-                </p>
-              </div>
-            </div>
+        </div>
+        <div class="col-md-4">
+          <div class="p-4 project-card">
+            <b style="font-size: 30px">Future</b>
+            <p style="padding-top: 3vh">
+              Every goal I set are building blocks for my future, which include
+              graduating from college, and becoming either a software engineer
+              or entering the cybersecurity field. However, all things
+              technology and software will pique my interest always.
+            </p>
           </div>
         </div>
       </div>
@@ -390,7 +331,7 @@
       class="container overflow-hidden text-center fade-up-desktop fade-up-mobile animation"
       style="padding-bottom: 20vh"
     >
-      <div class="row gx-5">
+      <div class="row row-cols-1 row-cols-md-3 gx-4 text-center">
         <!-- ENTRIES -->
         <div class="col">
           <div class="p-4 project-card">
@@ -565,8 +506,6 @@
             </p>
           </div>
         </div>
-      </div>
-      <div class="row gx-5">
         <div class="col">
           <div class="p-4 project-card">
             <b style="font-size: 30px">iOS Application</b>
@@ -809,7 +748,12 @@
     <div style="text-align: center; margin-top: 20vh">
       <div>
         <p
-          style="font-size: 1.25em; display: inline-block; margin-bottom: 17px"
+          style="
+            max-width: 90%;
+            font-size: 1.25em;
+            display: inline-block;
+            margin-bottom: 17px;
+          "
           class="fade-up-desktop fade-up-mobile animation"
         >
           Looks like you made it to the end, thanks for scrolling through!
