Adds vertical gutters

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       class="container overflow-hidden text-center fade-up-desktop fade-up-mobile animation"
       style="padding-bottom: 20vh"
     >
-      <div class="row row-cols-1 row-cols-md-3 gx-4 text-center">
+      <div class="row gy-3 row-cols-1 row-cols-md-3 gx-4 text-center">
         <!-- ENTRIES -->
         <div class="col-md-4">
           <div class="p-4 project-card">
@@ -331,7 +331,7 @@
       class="container overflow-hidden text-center fade-up-desktop fade-up-mobile animation"
       style="padding-bottom: 20vh"
     >
-      <div class="row row-cols-1 row-cols-md-3 gx-4 text-center">
+      <div class="row gy-3 row-cols-1 row-cols-md-3 gx-4 text-center">
         <!-- ENTRIES -->
         <div class="col">
           <div class="p-4 project-card">
