Adds download links

--- a/index.html
+++ b/index.html
@@ -485,6 +485,14 @@
               thousands of active users a week and nearly over a thousand
               downloads!
             </p>
+            <a
+              class="link-underline"
+              href="https://chromewebstore.google.com/detail/help-me-bevo/igepffgmogjaehnlpgepliimadegcapd"
+              target="_blank"
+              >Extension Link</a
+            >
+            <br />
+            <br />
 
             <p>
               <img
@@ -572,8 +580,16 @@
               Natively, there is not an option on Canvas for a student to
               strikethrough an answer choice they think is wrong. With this
               browser extension, students can easily strikethrough an answer
-              choice so they can conclude to their final answer easily.<br /><br />
+              choice so they can conclude to their final answer easily.<br />
             </p>
+            <a
+              class="link-underline"
+              href="https://chromewebstore.google.com/detail/canvas-quiz-strikethrough/fcjcfgejljnocnojlhemagncjnofdjnj"
+              target="_blank"
+              >Extension Link</a
+            >
+            <br />
+            <br />
             <p>
               <img
                 src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black"
