Mobile Project Fix

--- a/index.html
+++ b/index.html
@@ -177,6 +177,8 @@
               I became naturally experienced in all things software. Because of
               this, I decided to combine my desire of becoming like my father
               and my love for software, and entered the world of programming.
+              Fun fact: my love for "programming" came from Minecraft's
+              redstone!
             </p>
           </div>
         </div>
@@ -191,8 +193,8 @@
               for <b>Computer Science</b>. I tend to work on side projects to
               branch my knowledge, along with engaging in organizations I have
               joined at my school. Additionally, on the side, I own and program
-              a popular Roblox game played over 470,000 times as a front &
-              backend developer.
+              a popular Roblox game played over 500,000 times as a front &
+              backend developer, and manage a few chrome extensions.
             </p>
           </div>
         </div>
