Fix redirection after submitting form

--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
           name="access_key"
           value="e22c7707-2a27-4b48-8408-c6d8b06b70e2"
         />
-        <input type="hidden" name="redirect" value="https://aidenj.dev/" />
+        <input type="hidden" name="redirect" value="https://aidenjohnson.dev/" />
         <div class="form-group row">
           <label
             for="contact-email"
